Implement the rest of the roadmap
Dependencies take a long form: `classifier` (also as a third segment of
the key), `exclusions` as group:artifact patterns, and `compile-only`,
which keeps a jar and what it brings in on the compile and test
classpaths but off the runtime one. Classified and non-jar transitive
dependencies now resolve instead of being skipped, and a package widened
to a broader classpath after its dependencies were walked now hands the
wider classpath down to them. SNAPSHOT versions resolve through
maven-metadata.xml, are re-checked daily (every build for file://
repositories, always on `jrs update`) and are never pinned in jrs.lock.

The cache records which projects use it, so `jrs cache prune` can drop
what no lockfile names; `--unused-for` goes by last use, kept in each
file's access time. `jrs cache path` prints where it is.

A project can pin its JDK with `java.jdk`, `.java-version` or
`.sdkmanrc`; jrs finds it through the user config's [jdks] table,
JAVA_HOME/PATH, or the usual install locations. [run] and [test]
jvm-args reach the JVMs. `--watch` rebuilds or retests on change, and
`jrs doc` drives javadoc.

`jrs test` writes JUnit XML to target/test-reports, takes tag and method
selection, runs JUnit 4 through the Vintage engine and JUnit 6 like 5,
and records coverage with JaCoCo under `--coverage`.

`jrs package` gains `--portable` (dependencies in target/lib with a
relative Class-Path), `--jlink` (a trimmed runtime image with launchers)
and `--jpackage [type]`. jdeps ignores @argfiles, so its inputs go on the
command line in batches.

New commands: `outdated`, `add`, `remove`, `classpath`, `completions`,
and `tree --depth` / `--why`; `init --lib`, and both templates start with
a JUnit test. `add`/`remove` and the completions are hand-rolled rather
than built on toml_edit and clap_complete: a line editor that refuses
what it cannot edit safely, and a generator over the clap definition.

Migration translates classifiers, exclusions, provided/