@@ -26,18 +26,26 @@ your own requirements before adopting it for production builds.
 ## Features
 
 - Dependency resolution against Maven Central and additional repositories, with
-  transitive dependencies and nearest-wins version mediation
-- Checksum-verified downloads into a shared local cache, plus an `--offline` mode
+  transitive dependencies and nearest-wins version mediation, classifiers,
+  exclusions, compile-only dependencies and SNAPSHOT versions
+- Checksum-verified downloads into a shared local cache, plus an `--offline`
+  mode and cache pruning
 - A committed `jrs.lock` for reproducible resolution
-- Compilation of multi-file source trees with configurable `javac` flags
-- JUnit 5 test execution with class-name filtering
-- Packaging to a plain jar or a self-contained fat jar
-- Running the project's main class directly
+- Compilation of multi-file source trees with configurable `javac` flags, with
+  the JDK pinned per project if you want
+- JUnit 5 and 6 tests, and JUnit 4 through the Vintage engine, with class, tag
+  and method selection, JUnit XML reports and JaCoCo coverage
+- Packaging to a plain jar, a portable jar with its `lib/`, a self-contained fat
+  jar, a `jlink` runtime image or a `jpackage` installer
+- Running the project's main class directly, and rebuilding on every change
+- Javadoc, dependency trees with `--why`, outdated-dependency reports, and
+  `jrs add` / `jrs remove`
 - Parallel resolution, download and compilation
 - Progress output that adapts to the terminal: spinners, live download bars and
   a build summary, with ASCII and no-colour fallbacks
 - One-shot migration from Maven (`pom.xml`) and Gradle (`build.gradle`,
   `build.gradle.kts`)
+- Shell completions for bash, zsh and fish
 
 See [SPEC.md](SPEC.md) for the design behind them.
 
@@ -111,9 +119,14 @@ Each project's `target/` directory is disposable and can be removed with
 ## Getting started
 
 ```
-jrs init            # scaffold jrs.toml and a starter main class
+jrs init            # scaffold jrs.toml, a starter main class and its test
 jrs run             # compile and run
+jrs test            # compile the tests and run them
 ```
+
+`jrs init --lib` scaffolds a library instead: no main class, just a starter
+class and its test. Both templates declare JUnit 5 as a dev-dependency, so the
+first build downloads it.
 
 A whole project is one manifest and a source tree:
 
@@ -172,12 +185,59 @@ javac-args = ["-Xlint:all", "-Werror"]
 | `target` | — | Set only when it differs from `source`. |
 | `encoding` | `UTF-8` | `javac -encoding`. |
 | `javac-args` | `[]` | Extra flags passed through verbatim. |
+| `javadoc-args` | `[]` | Extra flags for `jrs doc`, such as `-Xdoclint:none`. |
+| `jdk` | — | The JDK to build with, by feature version. See [Choosing the JDK](#choosing-the-jdk). |
+
+### `[run]`, `[test]` and `[package]`
+
+```toml
+[run]
+jvm-args = ["-Xmx512m", "--enable-preview"]   # for `jrs run`, before -cp
+
+[test]
+jvm-args = ["-Dmode=test"]                   # for the test JVM
+jacoco-version = "0.8.15"                    # for `jrs test --coverage`; optional
+
+[package]
+add-modules = ["jdk.crypto.ec"]              # for --jlink / --jpackage images
+```
+
+`add-modules` names JDK modules an image needs beyond the ones `jdeps` finds
+itself. `jdeps` cannot see modules that are only reached by reflection or
+`ServiceLoader`, such as the TLS providers in `jdk.crypto.ec`.
 
 ### `[dependencies]` and `[dev-dependencies]`
 
 Each entry maps a `"group:artifact"` coordinate to a version string.
 `[dev-dependencies]` are on the test classpath only and are excluded from a fat
 jar.
+
+The long form is a table with a `version` and any of the following:
+
+```toml
+[dependencies]
+"com.google.guava:guava" = { version = "33.0.0-jre", exclusions = ["com.google.code.findbugs:jsr305"] }
+"jakarta.servlet:jakarta.servlet-api" = { version = "6.0.0", compile-only = true }
+"io.netty:netty-transport-native-epoll" = { version = "4.1.100.Final", classifier = "linux-x86_64" }
+"org.lwjgl:lwjgl" = "3.3.3"
+"org.lwjgl:lwjgl:natives-linux" = "3.3.3"   # a classifier in the key
+```
+
+- **`exclusions`** are `"group:artifact"` patterns, where `*` can stand for
+  either half. The dependency's transitive graph stops at anything they match.
+- **`compile-only = true`** means the dependency, and everything it brings in,
+  is on the compile and test classpaths but not the runtime one. It stays out
+  of `jrs run`, the thin jar's `Class-Path`, `lib/` and the fat jar. This is
+  Maven's `provided` and Gradle's `compileOnly`.
+- **`classifier`** selects a file published beside the main jar, such as
+  natives or a platform build. Writing the classifier in the key lets one table
+  hold the same artifact with and without it.
+
+A version ending in `-SNAPSHOT` resolves through the repository's
+`maven-metadata.xml`, and its checksum is not pinned in `jrs.lock`. A cached
+snapshot is re-checked once a day. When it came from a `file://` repository,
+such as `~/.m2/repository`, it is re-checked on every build. `jrs update`
+re-checks every snapshot at once.
 
 ### `[repositories]`
 
@@ -196,17 +256,27 @@ internal = "https://repo.example.com/maven2"
 
 | Command | Behaviour |
 | --- | --- |
-| `jrs build` | Resolve → compile main sources → copy resources. |
-| `jrs test [--filter <pattern>]` | `build` + compile test sources + run JUnit 5. |
+| `jrs build [--watch]` | Resolve → compile main sources → copy resources. `--watch` rebuilds on every change. |
+| `jrs test` | `build` + compile test sources + run the tests. See [Tests](#tests) for its flags. |
 | `jrs run [-- args...]` | `build` + run `main-class` with `args`. |
 | `jrs package` | `build` + produce `target/<name>-<version>.jar`. |
+| `jrs package --portable` | Same, with the runtime dependencies copied into `target/lib/`. |
 | `jrs package --fat` | Same, with every runtime dependency unpacked into the jar. |
+| `jrs package --jlink` | Also build a trimmed runtime image in `target/image`, with a launcher in `bin/`. |
+| `jrs package --jpackage [type]` | Also build a native package in `target/jpackage`, using jpackage's own types (`app-image`, `dmg`, `pkg`, `deb`, `rpm`, `exe`, `msi`). |
+| `jrs doc` | Generate Javadoc into `target/doc`. |
 | `jrs clean` | Remove `target/`. |
-| `jrs tree` | Print the resolved dependency graph. |
+| `jrs tree [--depth <n>] [--why <artifact>]` | Print the resolved dependency graph, or every path that leads to one artifact. |
+| `jrs classpath [--test \| --runtime]` | Print the resolved classpath, for editors and `java -cp "$(jrs classpath)"`. |
 | `jrs update` | Re-resolve and rewrite `jrs.lock`. |
 | `jrs verify` | Re-hash the cached dependency jars against the checksums in `jrs.lock`. |
-| `jrs init [--name <name>] [path]` | Scaffold `jrs.toml` + `src/main/java/com/example/Main.java`. |
+| `jrs outdated` | List declared dependencies that have newer releases. |
+| `jrs add <group:artifact[:version[:classifier]]>... [--dev] [--compile-only]` | Add dependencies to `jrs.toml`, at their newest release unless given a version. |
+| `jrs remove <group:artifact>... [--dev]` | Remove dependencies from `jrs.toml`. |
+| `jrs cache path` / `jrs cache prune` | Print where the cache is, or remove what no project uses. See [Dependency cache](#dependency-cache). |
+| `jrs init [--lib] [--name <name>] [path]` | Scaffold `jrs.toml`, a starter class and its test. |
 | `jrs migrate` | Generate `jrs.toml` from an existing `pom.xml` or Gradle build. |
+| `jrs completions <bash\|zsh\|fish>` | Print a shell completion script. See [Shell completions](#shell-completions). |
 
 Global flags: `-v/--verbose`, `-q/--quiet`, `--offline`, `-j/--jobs <n>`,
 `--manifest-path <p>`, `--progress <auto|always|never>`,
@@ -216,8 +286,24 @@ Exit codes: `0` success, `1` build or test failure, `2` usage or manifest error.
 
 `jrs package` writes a thin jar whose `Class-Path` points at the cached
 dependency jars, so `java -jar` works without a classpath argument on the
-machine that built it. `--fat` unpacks those dependencies into the jar instead,
-producing an artifact that runs anywhere.
+machine that built it. `--portable` copies the dependencies into `target/lib/`
+and points the `Class-Path` there instead, so the jar and its `lib/` can be
+zipped up and shipped together. `--fat` unpacks the dependencies into the jar
+itself, producing a single artifact that runs anywhere.
+
+`--jlink` and `--jpackage` go one step further and ship a Java runtime too.
+`jdeps` works out which JDK modules the application and its dependencies need,
+then `jlink` builds a runtime with only those. `--jlink` leaves it in
+`target/image`, with the application under `app/` and a launcher script at
+`bin/<name>`. `--jpackage` hands everything to `jpackage` for a native
+installer. Both use the portable layout unless `--fat` is given too. Both
+require `project.main-class`.
+
+`jrs add` and `jrs remove` edit `jrs.toml` in place, keeping its comments and
+order. An edit that jrs cannot make safely is refused, with a message saying to
+edit the file by hand. After each change the graph is resolved again, and if
+that fails — a coordinate that does not exist, say — the manifest is put back
+the way it was.
 
 ## Dependency cache
 
@@ -238,6 +324,23 @@ is safe to share between concurrent builds.
 well as against the repository's own `.sha1`, so a repository that starts
 serving different bytes under the same version fails the build. Jars already in
 the cache are not re-hashed on every build; `jrs verify` does that on demand.
+
+The cache only grows until it is pruned:
+
+```
+jrs cache path                        # where it is
+jrs cache prune --dry-run             # what would go
+jrs cache prune                       # drop what no project's jrs.lock names
+jrs cache prune --unused-for 30       # drop what no build has used in 30 days
+```
+
+Every project jrs builds is recorded in the cache, so a plain `prune` keeps
+exactly what those projects' lockfiles name. It also drops the parent POMs,
+BOMs, test launchers and JaCoCo jars that only a fresh resolution or a
+`--coverage` run needs; those are downloaded again when they are next wanted.
+`--unused-for` goes by when each artifact was last used. jrs records that in
+the file's access time at most once a day, so it works even on filesystems
+mounted `noatime`.
 
 ## User configuration
 
@@ -265,6 +368,9 @@ central = "https://nexus.example.com/repository/maven-central"
 [credentials.internal]                    # a repository name from jrs.toml
 username = "ci"
 password-env = "NEXUS_PASSWORD"           # or `password`, `token`, `token-env`
+
+[jdks]                                    # JDKs jrs would not find on its own
+21 = "/opt/jdks/temurin-21"
 ```
 
 - **Credentials** are sent as HTTP basic auth (`username` + `password`) or as a
@@ -279,9 +385,82 @@ password-env = "NEXUS_PASSWORD"           # or `password`, `token`, `token-env`
 - **Proxy**: without a `[proxy]` table, `HTTPS_PROXY`, `HTTP_PROXY`,
   `ALL_PROXY` and `NO_PROXY` from the environment apply.
 
+- **JDKs**: `[jdks]` maps a Java feature version to a JDK home, for a
+  project that pins a version installed somewhere jrs does not look.
+
 A dropped connection or an HTTP 429/5xx from a repository is retried twice,
 with a backoff, before the build fails. A 404 or a 401 is believed the first
 time.
+
+## Choosing the JDK
+
+By default jrs builds with the JDK at `JAVA_HOME`, or failing that the `javac`
+on `PATH`. A project can pin a version instead, in any of three places,
+checked in this order:
+
+- `jdk = 21` under `[java]` in `jrs.toml`
+- a `.java-version` file, as written by jenv, asdf or mise (`21`, `temurin-21.0.2`)
+- a `.sdkmanrc` file with a `java=21.0.2-tem` line
+
+A pinned version is looked up in the user configuration's `[jdks]` table
+first, then at `JAVA_HOME` / `PATH`, then among the JDKs installed in the
+usual places:
+- SDKMAN!, asdf, mise, IntelliJ and Gradle toolchains in your home directory
+- `/Library/Java/JavaVirtualMachines` and `/usr/lib/jvm`
+- `Program Files` on Windows
+- `JAVA_HOME_<version>_<arch>`, as exported by `actions/setup-java`
+
+When several builds of that version are installed, the newest wins. If none
+is found, the error lists the versions that were found. `jrs -v build` names
+the JDK it picked.
+
+## Tests
+
+`jrs test` runs the JUnit Platform console launcher, which jrs resolves itself:
+
+- **JUnit 5 and 6.** Declare `org.junit.jupiter:junit-jupiter`. The launcher
+  version follows from it.
+- **JUnit 4.** Declare `junit:junit`, and the tests run on the Vintage engine
+  that the launcher bundles. With both declared, both kinds run.
+
+| Flag | Effect |
+| --- | --- |
+| `--filter <regex>` | Only classes whose name matches. |
+| `--include-tag <expr>` / `--exclude-tag <expr>` | JUnit tag expressions; repeatable. |
+| `--method <class#method>` | Only this method, e.g. `com.example.FooTest#adds`; repeatable. |
+| `--coverage` | Record coverage with JaCoCo and write a report to `target/coverage` (HTML, plus `jacoco.xml`). |
+| `--watch` | Test again on every change. |
+
+JUnit XML reports land in `target/test-reports`, where CI systems look for
+them. `[test] jvm-args` sets the test JVM's arguments.
+
+## Annotation processors
+
+jrs has no separate processor path. Configuring processors is a
+[non-goal](SPEC.md#12-non-goals). But `javac` runs any processor it finds on
+the compile classpath, so Lombok, MapStruct, Dagger and the like work as
+compile-only dependencies:
+
+```toml
+[java]
+javac-args = ["-proc:full"]        # needed from JDK 23 on
+
+[dependencies]
+"org.projectlombok:lombok" = { version = "1.18.34", compile-only = true }
+```
+
+Since JDK 23, `javac` only runs processors found on the classpath when given
+`-proc:full`. JDK 21 and 22 accept the flag and don't need it. JDK 17 rejects
+it, so leave it out there. `jrs migrate` translates `annotationProcessor` and
+`<annotationProcessorPaths>` into exactly this.
+
+## Shell completions
+
+```
+source <(jrs completions bash)          # in ~/.bashrc
+source <(jrs completions zsh)           # in ~/.zshrc, after compinit
+jrs completions fish | source           # in ~/.config/fish/config.fish
+```
 
 ## Migrating an existing project
 
@@ -324,7 +503,19 @@ The integration tests build real Java fixture projects, so they need a JDK; they
 announce that they were skipped if there is none.
 
 CI runs `cargo fmt --check`, `cargo clippy --all-targets -D warnings`,
-`cargo build` and `cargo test` on every push and pull request against `master`.
+`cargo build` and `cargo test` on Linux, macOS and Windows, on every push and
+pull request against `master`.
+
+The M5 benchmark from SPEC §12 resolves a graph of about twenty artifacts from a
+local repository that adds latency to every request. It runs with
+`--progress never` and with `--progress always`, and prints how much of the
+wall time is the network, how much is jrs, and what the animated renderer
+costs:
+
+```
+cargo bench --bench resolution
+JRS_BENCH_LATENCY_MS=50 JRS_BENCH_RUNS=10 cargo bench --bench resolution
+```
 
 To cut a release, tag the tip of `master` and push the tag:
 
